TΔ5a 마이그레이션 `V6__0030_rename_entry_to_tasting_day.sql` + **식별자 개명**